# botclient

./: .env.deploy  .env.example  .gitignore  =5.9.0  DEPLOY-FIX.md  Guide-starter.md  README.md  SQUARECLOUD-DEPLOY.md  TESTING_README.md  add_admin.py  add_admin_dev_teste39.py  alembic.ini  backup_complete_20251031_122314.json  bot_minimal.py  botclient.db  check_admins.py  check_bot_chats.py  check_db.py  check_env.sh  debug_admins.py  demo_implementation.py  diagnose.sh  discover_chat_id.py  get_chat_id.py  get_chat_ids.py  init_db.py  network-config.yaml  print_admins.py  print_group_ids.py  pyproject.toml  requirements.txt  run_bot.sh  squarecloud.app  start.sh  test_basic_validation.py  test_bot.py  test_bot_interactive.py  test_bot_messages.py  test_complete_implementation.py  test_real_validation.py  (+7 more)
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
depix/: Authentication.md  💻 Examples.md  🧵Deposit-Status-String.md  🪝 Webhook.md
docs/: commands.md  implementation_plan.md  pixgo.md  projeto.md
migrations/: env.py
migrations/versions/: 3d57b5e29667_initial_migration.py  c7390e50c113_add_warn_count_and_auto_renew_columns_.py  fc1f10031f07_add_usdt_proof_fields_to_payment_model.py  fc68eb6a9eff_add_missing_tables_admins_groups_.py
specs/001-bot-commands-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-telegram-vip-groups-bot/: data-model.md  plan.md  spec.md  (+3 more)
src/: main.backup.py  main.backupp.py  main.py  main.py.backup  main.py.backup_refatorado
(+45 files in other folders)
